--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,15 +3,15 @@ name: Migrating Java Application
 on:
   push:
     branches:
-      - master
+      - main
     paths:
-      - 'spring-mvc-java11/**'
+      - 'Spring-Java11/**'
 
 
   
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
  
     steps:
     - name: Set up JDK
@@ -24,7 +24,7 @@ jobs:
       run: |
         sudo apt install maven -y
         mvn -version
-        cd spring-mvc-java11
+        cd Spring-Java11
         mvn install
         mvn rewrite:run
 
@@ -37,7 +37,7 @@ jobs:
       run: |
         if [ ! -d "migrated-folder" ]; then
           mkdir migrated-folder
-          mv spring-mvc-java11/* migrated-folder/  # Moves files from specific-folder to new-folder
+          mv Spring-Java11/* migrated-folder/  # Moves files from specific-folder to new-folder
           cd ./migrated-folder
           git add .
           git commit -m "Move files to new folder"
