--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         sudo apt install maven -y
         mvn -version
-        cd Spring-Java11
+        # cd Spring-Java11
         mvn install
         mvn rewrite:run
 
@@ -33,7 +33,7 @@ jobs:
       run: |
         if [ ! -d "migrated-folder" ]; then
           mkdir migrated-folder
-          mv Spring-Java11/* migrated-folder/  # Moves files from specific-folder to new-folder
+          mv ./* migrated-folder/  # Moves files from specific-folder to new-folder
           cd ./migrated-folder
           git add .
           git commit -m "Move files to new folder"
