--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         sudo apt install maven -y
         mvn -version
         cd Spring-Java11-mvc
-        mvn install
+        mvn install -DskipTests
         mvn rewrite:run
 
     # Step 4: Configure Git identity
