--- a/Spring-Java11-mvc/pom.xml
+++ b/Spring-Java11-mvc/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.brucephillips.spring.examples</groupId>
-    <artifactId>spring-mvc-java11</artifactId>
+    <artifactId>Spring-Java11-mvc</artifactId>
     <packaging>war</packaging>
     <version>1.0.0</version>
-    <name>spring-mvc-java11</name>
+    <name>Spring-Java11-mvc</name>
 
 
     <properties>
@@ -184,8 +184,25 @@
      </dependencies>
 
     <build>
-        <finalName>spring-mvc-java11</finalName>
+        <finalName>Spring-Java11-mvc</finalName>
         <plugins>
+                 <plugin>
+               <groupId>org.openrewrite.maven</groupId>
+               <artifactId>rewrite-maven-plugin</artifactId>
+               <version>5.22.0</version>
+               <configuration>
+                 <activeRecipes>
+                   <recipe>org.openrewrite.java.migrate.UpgradeToJava17</recipe>
+                 </activeRecipes>
+               </configuration>
+               <dependencies>
+                 <dependency>
+                   <groupId>org.openrewrite.recipe</groupId>
+                   <artifactId>rewrite-migrate-java</artifactId>
+                   <version>2.8.0</version>
+                 </dependency>
+               </dependencies>
+             </plugin>
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
