--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,3 +51,5 @@ jobs:
         else
           echo " migrated-folder already exists, skipping move operation"
         fi
+      env:
+       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
