--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,4 +52,4 @@ jobs:
           echo " migrated-folder already exists, skipping move operation"
         fi
       env:
-       GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
+       GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT_TOKEN }}
