--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
     # Step 1: Checkout code
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Fetch all history to ensure access to all branches and commits
+        token: ${{ secrets.ACTIONS_PAT_TOKEN }}
 
     # Step 2: Set up JDK
     - name: Set up JDK
